cont-stack-jmh-native-access: spec — both roads on one JMH lane (the packaged jar on the Jmh classpath, the flag per run); the ucontext-layouts changelog cites the landed shas
Claude-Session: https://claude.ai/code/session_01VZwf6drLbEaLiAvXi7aDGG